// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Heading snapshot should render correctly for IDX 1`] = `
.emotion-0 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #6E6E73;
  margin: 0;
  padding-bottom: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 1.5rem 0 0.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding: 1.5rem 0 0;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    width: 100%;
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div>
  <h1
    class="emotion-0 emotion-1"
    dir="ltr"
    tabindex="-1"
  >
    Index Heading
  </h1>
</div>
`;

exports[`Index Heading snapshot should render rtl correctly for IDX 1`] = `
.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #6E6E73;
  margin: 0;
  padding-bottom: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-0 {
    padding: 1.5rem 0 0.5rem;
  }
}

@media (min-width: 63rem) {
  .emotion-0 {
    padding: 1.5rem 0 0;
  }
}

@media (min-width: 80rem) {
  .emotion-0 {
    width: 100%;
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div>
  <h1
    class="emotion-0 emotion-1"
    dir="rtl"
    tabindex="-1"
  >
    Index Heading
  </h1>
</div>
`;
